--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,25 +3,21 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "airbnb-base",
-        "prettier",
-        "plugin:prettier/recommended"
-    ],
+    "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
     "rules": {
         "prettier/prettier": "error",
         "indent": ["error", 4],
         "no-console": "warn",
         "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
         "import/prefer-default-export": "off",
-        "camelcase": "off"
+        "camelcase": "off",
+        "no-underscore-dangle": "off",
+        "no-await-in-loop": "off"
     }
 }
