--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "twitch-easy",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Easy twitch api wrapper",
   "main": "lib/index.js",
   "types": "lib",
   "scripts": {
     "pack": "npm pack",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "start": "tsc && node ."
   },
   "author": {
     "name": "João Gabriel",
@@ -17,12 +18,12 @@
     "axios": "^0.26.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
