--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,18 +6,46 @@
     "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12,
+        "ecmaVersion": 13,
         "sourceType": "module"
     },
     "plugins": ["@typescript-eslint"],
     "rules": {
         "prettier/prettier": "error",
-        "indent": ["error", 4],
         "no-console": "warn",
         "lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
-        "import/prefer-default-export": "off",
         "camelcase": "off",
         "no-underscore-dangle": "off",
-        "no-await-in-loop": "off"
+        "no-await-in-loop": "off",
+        "padding-line-between-statements": [
+            "error",
+            {
+                "blankLine": "always",
+                "prev": "block-like",
+                "next": "*"
+            },
+            {
+                "blankLine": "always",
+                "prev": "*",
+                "next": "block-like"
+            }
+        ],
+        "import/prefer-default-export": "off",
+        "import/no-unresolved": "error",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "ts": "never"
+            }
+        ],
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.spec.js"] }]
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            }
+        }
     }
 }
