--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es2022": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
     "parser": "@typescript-eslint/parser",
