--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "lib",
   "scripts": {
     "pack": "npm pack",
+    "test": "jest",
     "build": "tsc -p .",
     "start": "tsc && node ."
   },
@@ -18,6 +19,7 @@
     "axios": "^0.27.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
@@ -26,7 +28,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "repository": {
